# langchain_deepseek

./: README.md  index.py  pyproject.toml
RAG/: 0_loader.py  2_embedding.py  index.py  pre_0_spliter.py  pre_1_embedding.py  pre_2_similarity_search.py
RAG_chat/: index.py  qa_chain.py
RAR_chat/: index.py
app/: index.py
docs/: product_data.csv
docs/chroma/matplotlib/: chroma.sqlite3
langchain_app/: 0_model_prompt_output.py  1_memory.py  2_model_chains.py  3_qa.py  4_evaluation.py  5_agent.py
llm_ds/: __init__.py  index.py
output/: index.py
prompts/: 0_principle.py  1_iterative.py  2_summerizing.py  3_inferring.py  4_transforming.py  5_expanding.py  6_chatbot.py  7_orderbot.py  7_wordware.py  8_wordware.py  __init__.py  ielts.py  index.py  tool.py
qa_sys/: 0_canonical_form.py  1_classification.py  2_moderation.py  3_chain_of_thught.py  4_chaining_prompts.py  5_check_result.py  index.py  tool.py
tools/: index.py  list.py
