[tool.poetry]
name = "langchain-deepseek"
version = "0.1.0"
description = "langchain and deepseek"
authors = ["qiaochao <qiaochao@icourt.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
pypdf = "^4.3.1"
langchain-community = "^0.2.16"
langchain-huggingface = "^0.0.3"
chromadb = "^0.5.5"
lark = "^1.2.2"
panel = "^1.4.5"
param = "^2.1.1"
docarray = "^0.40.0"
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
